@@ -1,6 +1,7 @@
 package jvm;
 
 import demoObject.BigObject;
+import utils.GCUtils;
 import utils.ThreadUtils;
 
 import java.lang.ref.ReferenceQueue;
@@ -11,15 +12,22 @@ import java.util.concurrent.locks.LockSupport;
 
 /**
  * Created by johnny.ly on 2016/6/26.
+ * 只有full gc才会回收weak reference，full gc后还没有空间则会回收soft reference(由jvm决定是否没有空间，明明有空间也回收)
+ * 1. Weak和Soft会自动清除引用,在gc时会被enqueue，在enqueue之前清除引用，所以poll之后get()返回null
+ * 2. pham不会自动清除引用,当确定会被垃圾回收时就会被enqueue，而不是等到gc时才去enqueue，类似于"垃圾回收通知"
+ testWeakGC,testPhamGC,testSoftGC 统一使用以下参数
+ -Xms10m
+ -Xmx10m
+ -XX:+PrintGCDetails
+ -XX:+PrintGCTimeStamps
+ *
  */
 public class testWeakGC {
-    //只有full gc才会回收weak reference，full gc后还没有空间则会回收soft reference
     private static List<WeakReference<Object>> object1s = new LinkedList<WeakReference<Object>>();
 
     private static ReferenceQueue<Object> queue = new ReferenceQueue<>();
 
     public static void main(String[] args) throws Exception{
-        ThreadUtils.sleep(10000);
 
         object1s.add(new WeakReference<Object>(new BigObject(),queue));
         object1s.add(new WeakReference<Object>(new BigObject(),queue));
@@ -29,12 +37,14 @@ public class testWeakGC {
             BigObject o = new BigObject();
             System.out.println(o);
             o = null;
+            GCUtils.gcWithSleep();
             Object r;
             while((r = queue.poll())!=null){
-                System.out.println("object from queue " + r);
+                WeakReference<Object> mr = (WeakReference<Object>)r;
+                System.out.println("object from queue " + mr.get() + " " + mr.get());
             }
             //ThreadUtils.sleep(3000);
-            LockSupport.parkNanos(3000000000L);
+            LockSupport.parkNanos(1000000000L);
         }
     }
 }
